--- a/src/pages/AboutPage/styles/AboutPage.css
+++ b/src/pages/AboutPage/styles/AboutPage.css
@@ -10,7 +10,7 @@
 .dossier-paper {
     /* background-color: #FFFFF0; */
     background-image: url("../images/oldPaper3.jpg");
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     padding: 2em 3em;
     max-width: 1000px;
     margin: 0 auto;
@@ -109,4 +109,22 @@
     font-size: 0.8em;
     color: #555;
     text-align: justify;
+}
+@media (max-width: 1200px) {
+  .dossier-main-content {
+    flex-direction: column;
+  }
+
+  .left-panel,
+  .right-panel {
+    width: 100%;
+  }
+
+  .job-history-section {
+    width: 100%;
+  }
+}
+
+.job-history-section {
+  width: 100%;
 }
