--- a/src/pages/AboutPage/styles/AboutPage.scss
+++ b/src/pages/AboutPage/styles/AboutPage.scss
@@ -9,7 +9,7 @@
 
 .dossier-paper {
     /* background-color: #FFFFF0; */
-    background-image: url("@/pages/AboutPage/images/oldPaper3.jpg");
+    // background-image: url("../images/oldPaper3.jpg");
     background-repeat: repeat-y;
     padding: 2em 3em;
     max-width: 1000px;
